	syntax is "/method:user@host:path".  Note the colon after the
	method.
	(tramp-handle-file-name-directory): Don't return "/" when
	completing a remote root directory (where the filename looks like
	"/method:user@host:/").
	(tramp-handle-ange-ftp): Deleted.
	(tramp-disable-ange-ftp): New function, called at toplevel,
	deletes Ange-FTP from file-name-handler-alist.

2002-07-10  Juanma Barranquero  <lektu@terra.es>

	* ido.el (ido-enter-single-matching-directory): Delete leftover comment.

	* speedbar.el (speedbar-tag-hierarchy-method): Fix typos.
	(speedbar-vc-do-check): Likewise.
	(speedbar-obj-do-check): Likewise.
	(speedbar-mouse-hscroll): Likewise.
	(speedbar-file-lists): Likewise.

	* emacs-lisp/authors.el (authors-obsolete-file-p): Fix typo.

2002-07-09  Juanma Barranquero  <lektu@terra.es>

	* faces.el (face-id): Fix typo.

	* hexl.el (hexl-mode): Likewise.

	* progmodes/idlw-shell.el (idlwave-shell-set-bp): Likewise.

	* progmodes/ebnf-yac.el (ebnf-yac-error): Likewise.

	* speedbar.el (speedbar-make-specialized-keymap): Fix docstring.
	(speedbar-desired-buffer): Likewise.
	(speedbar-line-file): Likewise.
	(speedbar-special-mode-key-map): Fix typo.
	(speedbar-dynamic-tags-function-list): Likewise.
	(speedbar-use-images): Likewise.
	(speedbar-up-directory): Likewise.
	(speedbar-item-info): Likewise.
	(speedbar-set-timer): Likewise.
	(speedbar-insert-button): Likewise.
	(speedbar-make-button): Likewise.
	(speedbar-make-tag-line): Likewise.
	(speedbar-insert-files-at-point): Likewise.
	(speedbar-update-special-contents): Likewise.
	(speedbar-find-selected-file): Likewise.
	(speedbar-add-indicator): Likewise.
	(speedbar-do-function-pointer): Likewise.
	(speedbar-goto-this-file): Likewise.
	(speedbar-line-path): Likewise.
	(speedbar-mouse-event-p): Likewise.
	(speedbar-dir-follow): Likewise.
	(speedbar-tag-find): Likewise.
	(speedbar-fetch-etags-command): Likewise.
	(speedbar-fetch-etags-arguments): Likewise.
	(speedbar-toggle-etags): Likewise.